--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-kakao-maps-sdk": "^1.1.27",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1"
   },
   "scripts": {
